Added Github link

--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
       </form>
       </div>
     </div>
+    <a href="https://github.com/WanjohiWakari/Weather-App" id="git" target="blank">Open source code by Regina
+
+    </a>
+  
+     
 <script src="script.js"></script>
   </body>
 </html>
